--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "chatbot",
+  "homepage": "https://lisadascse72.github.io/Textbot-assistant",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  
+ "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+},
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "lucide-react": "^0.525.0",
